--- a/lanternflowers.ipynb
+++ b/lanternflowers.ipynb
@@ -83730,36 +83730,13 @@
     }
    ],
    "source": [
-    "\n",
+    "#  NOT WORKING\n",
     "\n",
     "# # Apply preprocessing to all images\n",
     "# image_directory = os.getcwd()  # Current working directory - /Users/xiuwenzhu/Projects/Lantern_Flowers_BTT\n",
     "# print(image_directory)\n",
+    "\n",
     "train_df['imageData'] = train_df['imageFile'].apply(load_and_preprocess_image)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pillow in /Users/xiuwenzhu/opt/anaconda3/lib/python3.9/site-packages (9.0.1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pillow \n"
    ]
   },
   {
